# ohtu-palautusrepositorio

./: .gitignore  MERGE.md  PULL.md  README.md
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/nhl-reader/: .gitignore  .pylintrc
viikko2/nhl-reader/src/: player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/src/: index.py
viikko2/project-reader/: project-reader.code-workspace
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: .gitignore
viikko3/hello-robot/src/tests/: reset_counter.robot
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/web-login/: .gitignore
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  login_resource.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko5/tennis/src/tests/: tennis_game_test.py
viikko6/query-language/src/: matchers.py  query_builder.py
viikko7/kivi-paperi-sakset/: pyproject.toml
viikko7/kivi-paperi-sakset/src/: index.py
viikko7/kivi-paperi-sakset/src/kps/: kivi_paperi_sakset.py  tehdas.py  tuomari.py
viikko7/kivi-paperi-sakset/src/kps/pelaaja/: io_pelaaja.py  parempi_tekoaly_pelaaja.py  (+2 more)
