[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["3nd3r1 <ender.spam.guru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
cowsay = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
